--- a/WebUI/login.css
+++ b/WebUI/login.css
@@ -4,8 +4,8 @@
   }
   
   body {
-    background: #007bff;
-    background: linear-gradient(to right, #013220, #013220);
+    background: linear-gradient(to right, #0F2027 , #203A43, #2C5364	);
+    /* background-color: black; */
   }
   
   .card-signin {
@@ -25,7 +25,7 @@
     width: 45%;
     /* Link to your background image using in the property below! */
     background-image: url("img/bike1.png");
-    background-size: auto;
+    background-size: 100%;
 
   }
   
@@ -108,14 +108,3 @@
     font-size: 12px;
     color: #777;
   }
-  
-  .btn-google {
-    color: white;
-    background-color: #ea4335;
-  }
-  
-  .btn-facebook {
-    color: white;
-    background-color: #3b5998;
-  }
-  
